@@ -1,6 +1,7 @@
 # Change file for File::Hotfolder
 
 {{$NEXT}}
+    - extended logging
 
 0.03  2015-03-24 14:34:48 CET
     - fixed filter option
